fixed nav-collapse function

--- a/main.scss
+++ b/main.scss
@@ -6,6 +6,23 @@ body {
 h1:hover , h2:hover , h3:hover {
     color:#95ccee;
 }
+
+a:link {
+    text-decoration: none;
+    color: black;
+}
+
+a:visited {
+    color: #95ccee;;
+}
+
+.navbar-toggler {
+    border: 3px solid lightgray;
+}
+
+.navbar-toggler:active {
+    border: 3px solid lightgray;
+}
 /* Nav styling */
 
 nav {
@@ -100,12 +117,13 @@ form {
     justify-content: space-around;
     margin-top: .8em;
     
+    
 }
 
 .topics div {
     color: #eea058;
     font-weight: 500;
-    width: 5vw;
+    width: 75px;
     text-align: center;
     border-radius: 5px;
 }
@@ -115,13 +133,12 @@ form {
     color: whitesmoke;
 }
 
-a:link {
-    text-decoration: none;
-}
+
 
 /* Main container */
 .grid-container {
     margin-left: 1%;
+    margin-right: 1%;
     display: grid;
     grid-template: auto auto auto auto / 1fr auto;
     gap: 1em;
@@ -256,7 +273,10 @@ footer div:hover {
         grid-area: auto;
         display: flex;
         flex-direction: row;
+    }
 
+    .sidebar-photo {
+        height: 10rem;
     }
 
     .eye-bleach, .advice {
